[tool.poetry]
name = "fastapi-apscheduler"
version = "0.0.2"
description = "Allow manage APScheduler with FastAPI router"
authors = ["Jakub Miazek <the@grillazz.com>"]
readme = "README.md"
packages = [{include = "fastapi_apscheduler"}]
license = "MIT"
repository = "https://github.com/grillazz/fastapi-apscheduler"

classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = "^0.92.0"
APScheduler = "^3.10.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.247"
uvicorn = "^0.20.0"
SQLAlchemy = "^2.0.3"
aiosqlite = "^0.18.0"
rich = "^13.3.1"

[tool.poetry.group.test.dependencies]
asgi-lifespan = "^2.0.0"
httpx = "^0.23.3"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 120

select = ["E", "F", "UP", "N", "C", "B"]

# Exclude a variety of commonly ignored directories.
exclude = ["example",]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends",]

[tool.pytest.ini_options]
addopts = "-v --doctest-modules --doctest-glob=*.md --ignore=example"
asyncio_mode = "strict"
env_files = [".env"]

