[tool.poetry]
name = "fastapi-apscheduler"
version = "0.0.4"
description = "Allow manage APScheduler with FastAPI router"
authors = ["Jakub Miazek <the@grillazz.com>"]
readme = "README.md"
packages = [{include = "fastapi_apscheduler"}]
license = "MIT"
repository = "https://github.com/grillazz/fastapi-apscheduler"

classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = "^0.105.0"
APScheduler = "^3.10.4"
gunicorn = "^21.2.0"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
uvicorn = "^0.24.0"
SQLAlchemy = "^2.0.23"
aiosqlite = "^0.19.0"
rich = "^13.7.0"


[tool.poetry.group.test.dependencies]
asgi-lifespan = "^2.1.0"
httpx = "^0.23.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 120

select = ["E", "F", "UP", "N", "C", "B"]

# Exclude a variety of commonly ignored directories.
exclude = ["example",]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends",]

[tool.pytest.ini_options]
addopts = "-v --doctest-modules --doctest-glob=*.md --ignore=example"
asyncio_mode = "strict"
env_files = [".env"]

